// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Doesn't mark as loading when submitting mismatched details 1`] = `
<body>
  <div>
    <form
      class="ui error form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="error field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="different"
            />
          </div>
        </div>
        <div
          class="ui error message"
        >
          Passwords do not match
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;

exports[`Marks as loading when submitting valid details 1`] = `
<body>
  <div>
    <form
      class="ui loading form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;

exports[`Renders correctly when submitting triggers the callback as an unexpected failure 1`] = `
<body>
  <div>
    <form
      class="ui error form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      >
        !!profile.password.submit.errors.unexpected_error!!
      </div>
    </form>
  </div>
</body>
`;

exports[`Renders correctly when submitting triggers the callback as success 1`] = `
<body>
  <div>
    <form
      class="ui form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
      <div
        class="ui positive message"
      >
        Password Changed
      </div>
    </form>
  </div>
</body>
`;

exports[`renders correctly after entering new matching details 1`] = `
<body>
  <div>
    <form
      class="ui form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;

exports[`renders correctly after entering new mismatched details 1`] = `
<body>
  <div>
    <form
      class="ui form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value="newPassword"
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value="different"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;

exports[`renders errors if submitting when blank 1`] = `
<body>
  <div>
    <form
      class="ui error form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary disabled button"
        disabled=""
        tabindex="-1"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;

exports[`renders the initial state when a user is present 1`] = `
<body>
  <div>
    <form
      class="ui error form"
      data-test="PasswordForm"
    >
      <div
        class="required field"
        data-test="password"
      >
        <label>
          New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password"
              placeholder="Enter Password"
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="required field"
        data-test="password2"
      >
        <label>
          Re-enter New Password
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="password2"
              placeholder="Re-enter Password"
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary disabled button"
        disabled=""
        tabindex="-1"
        type="submit"
      >
        Change Password
      </button>
      <div
        class="ui error message"
        data-test="PasswordFormErrors"
      />
    </form>
  </div>
</body>
`;
